tests/data/wildcard-tls-secret/standard/wildcard-secret-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - wildcard.example.com
  rules:
  - host: "wildcard.example.com"
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
